Prepare for Java 11